--- a/pom.xml
+++ b/pom.xml
@@ -46,26 +46,23 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 
-				<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.5</version>
-				<executions>
-					<execution>
+				<build>
+				<plugins>
+					<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>0.8.8</version> <!-- use the version compatible with your setup -->
+					<executions>
+						<execution>
 						<goals>
 							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>report</id>
-						<phase>test</phase>
-						<goals>
 							<goal>report</goal>
 						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			</plugins>
+						</execution>
+					</executions>
+					</plugin>
+				</plugins>
+				</build>
 
 
 	</build>
