--- a/pom.xml
+++ b/pom.xml
@@ -74,35 +74,44 @@
                 </configuration>
             </plugin>
             
-            <!-- Dependency Check Plugin -->
-        <plugin>
-            <groupId>org.owasp</groupId>
-            <artifactId>dependency-check-maven</artifactId>
-            <version>6.1.6</version>
-            <configuration>
-                <!-- Output format for the report -->
-                <format>ALL</format>
-                
-                <!-- Fail the build if any CVSS score is greater than or equal to 9 -->
-                <failBuildOnCVSS>9</failBuildOnCVSS>
-                
-                <!-- Use internal mirroring of CVE contents
-                Supporting files
-                E.g. a company-wide suppression file and local project file -->
+  <!-- Dependency Check Plugin -->
+<plugin>
+    <groupId>org.owasp</groupId>
+    <artifactId>dependency-check-maven</artifactId>
+    <version>6.1.6</version>
+    <configuration>
+        <!-- Output format for the report -->
+        <format>ALL</format>
+        
+        <!-- Fail the build if any CVSS score is greater than or equal to 9 -->
+        <failBuildOnCVSS>9</failBuildOnCVSS>
+        
+        <!-- Use internal mirroring of CVE contents -->
+        <!-- Example URLs for internal CVE content mirroring (uncomment and customize as needed) -->
+        <!--
+        <cveUrlModified>http://internal-mirror.mycorp.com/nvdve-1.1-modified.json.gz</cveUrlModified>
+        <cveUrlBase>http://internal-mirror.mycorp.com/nvdve-1.1-%d.json.gz</cveUrlBase>
+        -->
 
-                <!--
-                <cveUrlModified>http://internal-mirror.mycorp.com/nvdeve-1.1-modified.json.gz‹/cveUrlModified>
-                <cveUrlBase›http://internal-mirror.mycorp.com/nvdeve-1.1-%d.json.g2‹/cveUrlBase>
-
-                <suppressionFiles>
-                               <suppressionFiles>http://example.org/suppression.xm1‹/suppressionFile>
-                <suppressionFile›project-suppression.xml</suppressionFile>
-                
-                </suppressionFiles>
-                -->
-
-            </configuration>
-        </plugin>
+        <!-- Suppression files for CVEs -->
+        <!-- Example: company-wide suppression file and local project-specific file -->
+        <suppressionFiles>
+            <!-- URL to company-wide suppression file (uncomment and customize as needed) -->
+            <!-- <suppressionFile>http://example.org/suppression.xml</suppressionFile> -->
+            
+            <!-- Local project-specific suppression file -->
+            <suppressionFile>project-suppression.xml</suppressionFile>
+        </suppressionFiles>
+    </configuration>
+    <executions>
+        <execution>
+            <id>check</id>
+            <goals>
+                <goal>check</goal>
+            </goals>
+        </execution>
+    </executions>
+</plugin>
 
 
         </plugins>
