--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
     <version>6.1.6</version>
     <configuration>
         <format>ALL</format>
-        <failBuildOnCVSS>9/failBuildOnCVSS>
+        <failBuildOnCVSS>9</failBuildOnCVSS>
         
         <!-- 
           Use internal mirroring of CVE contents
